# kedro-inspect

./: .gitignore  .pdm-python  .pre-commit-config.yaml  404.html  Makefile  README.md  core.html  index.html  mkdocs.yml  notes.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
demo-project/: README.md  pyproject.toml  requirements.txt
demo-project/conf/: logging.yml
demo-project/conf/base/: catalog.yml  parameters.yml
demo-project/docs/source/: conf.py
demo-project/src/demo_project/: __main__.py  settings.py
demo-project/src/demo_project/pipelines/data_processing/: pipeline.py
demo-project/src/demo_project/pipelines/data_science/: pipeline.py
demo-project/tests/: test_run.py
demo-project/tests/pipelines/: test_data_science.py
docs/: index.md
kedro_inspect/: _modidx.py  core.py
nbs/: 00_core.ipynb  01_cli.py.ipynb  index.ipynb  nbdev.yml
search/: search_index.json
site_libs/bootstrap/: bootstrap.min.css
src/kedro_inspect/: cli.py  core.py  hooks.py  runner.py
